# stablecoin-audit

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml  pages.yml
configs/tokens/: eurc.base.yml  eurc.ethereum.yml  usdc.arbitrum.yml  usdc.base.yml  usdc.ethereum.yml  xsgd.base.yml  xsgd.polygon.yml
data/benchmarks/: README.md  RUN_ADDITIONAL_WINDOWS.md  blog_evidence_links.csv  cctp_flow_summary.csv  cross_asset_audit_surface.csv  cross_asset_geo_panel_summary.csv  data_completeness.csv  geo_stablecoin_surface_summary.csv  market_conditioned_audit.csv  rail_movement_summary.csv  signal_stability_summary.csv  stablecoin_dependency_edges.csv  stablecoin_dependency_summary.csv  stablecoin_liquidity_pairs.csv  stablecoin_pair_dependence_summary.csv  stablecoin_route_dependence.csv  windows.csv
docs/: ARCHITECTURE.md  AUDIT_GATES.md  DATA_MODEL.md  EVENT_CHANNEL_TAXONOMY.md  README.md  USDC_PROBE.md  index.html
docs/benchmarks/eurc_7d_20260513_20260520_base/: provenance.json  qa_report.json  summary.md  supply_audit.csv  (+1 more)
docs/demo/: README.md
docs/demo-api/: health.json  runs.json
docs/evidence/: blog_evidence_links_v1.md
docs/findings/: geo_policy_conditioned_findings_v2.md  market_conditioned_draft_v1.md
docs/product/: api_design_v0.md  article_notes_stablecoin_audit_toolkit.md  artifact_manifest_schema_v0.md  audit_architecture_v0.md  audit_product_pipeline_v0.md  audit_semantics_v0.md  backend_architecture_v0.md  canonical_audit_tables_v0.md  claim_registry_v0.md  evidence_browser_v0.md  refactor_plan_v0.md
docs/research/: geo_stablecoin_feasibility.md  xsgd_address_discovery.md
docs/ui/: app.js  demo-mode.js  index.html  style.css
scripts/: README.md  _market_sentiment_common.py  build_data_completeness.py  build_geo_panel_summary.py  build_market_conditioned_panel.py  build_window_event_context.py  clean_demo_runs.sh  discover_liquidity_surface.py  e2e_api_validation.sh  export_github_pages_demo.py  fetch_cctp_flows.py  fetch_fear_greed.py  fetch_usdc_price.py  join_window_sentiment.py  probe_token_volume.py  publish_benchmark.sh  run_pending_audits.sh  run_remote_pending_audits.sh  scan_eurc_base_convention.py  suggest_fng_windows.py
src/: lib.rs  main.rs  stablecoin_map.rs
src/api/: artifact_store.rs  demo_cleanup.rs  error.rs  mod.rs  path_jail.rs  routes.rs  run_jobs.rs
src/application/: workflow.rs
src/artifact/: audit_plan.rs  checksum.rs  cross_chain_summary_manifest.rs  execution_log.rs  manifest.rs  mod.rs  stablecoin_map_package.rs  transfer_audit_manifest.rs  writer.rs
src/audit/: canonical.rs  claims.rs  contracts.rs  mod.rs  pipeline.rs  supply.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/control_events/: mod.rs
src/decode/: mod.rs
src/domain/: artifact.rs  asset.rs  chain.rs  mod.rs  window.rs
src/fetch/: mod.rs
src/report/: mod.rs
src/rpc/: control_audit.rs  control_report_cmd.rs  cross_chain_summary.rs  fetch_logs.rs  metadata.rs  mock_rpc.rs  mod.rs  report_cmd.rs  resolve_window.rs  transfer_audit.rs  transfer_checkpoint.rs
tests/: __init__.py  test_market_sentiment.py
tests/fixtures/: fear_greed_api_sample.json
ui/: app.js  demo-mode.js  index.html  style.css
(+87 files in other folders)
