[package]
name = "stablecoin-audit"
version = "0.1.0"
edition = "2021"
description = "Per-asset EVM window audits: Transfer mint/burn vs totalSupply at pinned blocks; cross-chain rollup on one schema (USDC is the first benchmark)"

[lib]
name = "stablecoin_audit"
path = "src/lib.rs"

[[bin]]
name = "stablecoin-audit"
path = "src/main.rs"

[features]
# v0.1 default: `metadata`, `transfer-audit`, `cross-chain-summary`.
# Experimental: `fetch`, `report` (fetch bundle), issuer `control-audit` / `control-report`.
# API: read-only `serve` over artifact_root (axum).
experimental = []
api = ["dep:axum", "dep:tower"]

[dependencies]
alloy = { version = "0.8", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1", features = ["preserve_order"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true, features = ["util"] }

[dev-dependencies]
wiremock = "0.6"

[package.metadata.cargo-llvm-cov]
exclude = ["src/main.rs"]
